--- a/jowenly/index.html
+++ b/jowenly/index.html
@@ -173,11 +173,9 @@
             <div class="hero-inner">
                 <div class="container">
                     <div class="hero-content">
-                        <h2 class="title">luxury jewellery
-                            product</h2>
-                        <p>Neque convallis a cras semper auctor.
-                            Adipiscing elit ut aliquam purus sit amet luctus.
-                            Mauris vitae ultricies leo integer. Odio facilisis mauris sit amet massa.</p>
+                        <h2 class="title">Old World Handcrafted Jewelry Since 1972
+                            </h2>
+                        <p>At Hart Jewelers - Custom Goldsmiths, we honor tradition by using Old World techniques to create timeless designs. From heirloom redesigns to restorations and custom creations, every piece is crafted with unmatched skill and care.</p>
                         <a href="#" class="theme-btn">all collection</a>
                     </div>
                     <div class="hero-img">
