--- a/jowenly/blog-fullwidth.html
+++ b/jowenly/blog-fullwidth.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
-    <title>jowenly-Jewelry Store HTML5 Template</title>
+    <title>Hart Jewelers - Blog</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
-    <link href="assets/css/flaticon_jowenly.css" rel="stylesheet">
+    <link href="assets/css/hart-jewelers-icons.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/animate.css" rel="stylesheet">
     <link href="assets/css/owl.carousel.css" rel="stylesheet">
@@ -378,7 +378,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col col-xs-12">
-                            <p class="copyright"> Copyright &copy; 2023 Jowenly by <a href="index.html">wpOceans</a>.
+                            <p class="copyright"> Copyright &copy; 2023 Hart Jewelers by <a href="index.html">wpOceans</a>.
                                 All
                                 Rights Reserved.</p>
 
