--- a/jowenly/forgot.html
+++ b/jowenly/forgot.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="wpOceans">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
-    <title>jowenly-Jewelry Store HTML5 Template</title>
+    <title>Hart Jewelers - Forgot Password</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/flaticon_jowenly.css" rel="stylesheet">
+    <link href="assets/css/hart-jewelers-icons.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/animate.css" rel="stylesheet">
     <link href="assets/css/owl.carousel.css" rel="stylesheet">
