--- a/jowenly/index.html
+++ b/jowenly/index.html
@@ -180,15 +180,16 @@
                     <div class="hero-img">
                         <div class="image">
                             <img src="assets/images/slider/img-1.jpg" alt="">
+
                         </div>
                      
                     </div>
                 </div>
             </div>
-            <div class="sider-img-on">
-                <img src="assets/images/slider/img-2.jpg" alt="">
+            <div class="sider-img-off">
+                <img src="assets/images/slider/img.jpg" alt="">
             </div>
-            <div class="sider-img-two">
+            <div class="sider-img-">
                 <img src="assets/images/slider/img-3.jpg" alt="">
             </div>
         </section>
@@ -288,8 +289,8 @@
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <h2><a href="product-details.html">product name</a></h2>
-                                    <span>$890.00</span>
+                                    <h2><a href="product-details.html">Trillium</a></h2>
+                                    <span>$</span>
                                 </div>
                             </div>
                         </div>
@@ -302,8 +303,8 @@
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <h2><a href="product-details.html">product name</a></h2>
-                                    <span>$890.00</span>
+                                    <h2><a href="product-details.html">Mermaid</a></h2>
+                                    <span>$</span>
                                 </div>
                             </div>
                         </div>
@@ -316,8 +317,8 @@
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <h2><a href="product-details.html">product name</a></h2>
-                                    <span>$890.00</span>
+                                    <h2><a href="product-details.html">Montana</a></h2>
+                                    <span>$</span>
                                 </div>
                             </div>
                         </div>
@@ -330,8 +331,8 @@
                                     </div>
                                 </div>
                                 <div class="content">
-                                    <h2><a href="product-details.html">product name</a></h2>
-                                    <span>$890.00</span>
+                                    <h2><a href="product-details.html">Heart</a></h2>
+                                    <span>$</span>
                                 </div>
                             </div>
                         </div>
@@ -425,7 +426,7 @@
                         </div>
                     </div>
                     <div class="image">
-                        <img src="assets/images/trastimonial.jpg" alt="">
+                        <img src="assets/images/testamonial.jpg" alt="">
                     </div>
                 </div>
             </div>
