--- a/jowenly/index.html
+++ b/jowenly/index.html
@@ -371,7 +371,7 @@
                         </div>
                         <div class="content">
                             <div class="text">
-                                <h3>Sterling Silver Custom Wes Hart Owl w/ Montana Saphires</h3>
+                                <h3>Wes Hart Owl w/ Montana Sapphires</h3>
                                 <span>$389.00</span>
                                 <a href="#" class="theme-btn">add to cart</a>
                             </div>
@@ -469,9 +469,9 @@
                             </div>
                             <div class="content">
                                 <h2>
-                                    <a href="blog-single.html">Lorem ipsum dolor sit consectetur</a>
+                                    <a href="blog-single.html">Diamonds Decoded: Cut, Color, Clarity, & Carat</a>
                                 </h2>
-                                <p>Neque convallis a cras semper auctor. Adipiscing elit ut aliquam purus</p>
+                                <p>Understanding what truly makes a diamond shine.</p>
                                 <a href="blog-single.html" class="theme-btn">read more</a>
                             </div>
                         </div>
@@ -484,9 +484,9 @@
                             </div>
                             <div class="content">
                                 <h2>
-                                    <a href="blog-single.html">Lorem ipsum dolor sit consectetur</a>
+                                    <a href="blog-single.html">Montana's Sapphires: America's Rarest Blue Gem</a>
                                 </h2>
-                                <p>Neque convallis a cras semper auctor. Adipiscing elit ut aliquam purus</p>
+                                <p>Discover the natural beauty and remarkable story behind Montana's legendary sapphire.</p>
                                 <a href="blog-single.html" class="theme-btn">read more</a>
                             </div>
                         </div>
